Agregado el ejecutable para correr la API de manera local
